--- a/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1.csproj
@@ -94,6 +94,12 @@
   <ItemGroup>
     <None Include="未命名.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\favicon-20181126051103728.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
